--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ nav .active {
 .lilbox1,
 .lilbox2 {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   width: 50%;
   background-color: white;
   padding: 40px;
@@ -122,7 +122,7 @@ nav .active {
 }
 .lilbox3 {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   width: 100%;
   background-color: white;
   padding: 40px;
@@ -166,7 +166,7 @@ nav .active {
   width: 100%;
   height: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 100px;
   transition-duration: 200ms;
@@ -176,7 +176,7 @@ nav .active {
   width: 100%;
   text-align: center;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 40px;
   transition-duration: 200ms;
@@ -186,26 +186,99 @@ nav .active {
   text-align: center;
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 40px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
+/*Напраления*/
+.napravlenias {
+  padding: 0 50px 0 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  gap: 15px;
+}
+
+.titlenapravlenie1 {
+  background-image: url(./image/napravlenie1.jpg);
+
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  border-radius: 10px;
+  background-color: white;
+  padding: 25px;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.titlenapravlenie2 {
+  background-image: url(./image/napravlenie2.jpg);
+  text-align: center;
+  width: 100%;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  border-radius: 10px;
+  background-color: white;
+  padding: 25px;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.titlenapravlenie3 {
+  background-image: url(./image/napravlenie3.jpg);
+  text-align: center;
+  width: 100%;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  border-radius: 10px;
+  background-color: white;
+  padding: 25px;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.napravlenieinfo {
+  padding: 20px 20px 40px 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 80px;
+}
+.forma {
+  display: flex;
+  padding-top: 25px;
+}
+.numbox {
+  display: grid;
+  width: 30%;
+  place-items: center;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  border-radius: 10px;
+  background-color: white;
+}
+.lilbox17 {
+  width: 100%;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  border-radius: 20px;
+  background-color: white;
+  padding: 10px;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.background-tint {
+  background-color: rgba(0, 0, 0, 0.219);
+  background-blend-mode: multiply;
+}
+
 /*научная деятельность*/
 .lilbox4 {
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
-  padding: 20px;
+  padding: 40px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox5 {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 100px;
   transition-duration: 200ms;
@@ -214,7 +287,7 @@ nav .active {
 }
 .lilbox6 {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 40px;
   transition-duration: 200ms;
@@ -245,7 +318,7 @@ nav .active {
 .lilbox7 {
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 40px;
   transition-duration: 200ms;
@@ -332,7 +405,7 @@ nav .active {
   font-family: "Days One", sans-serif;
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 60px;
   margin-bottom: 15px;
@@ -341,12 +414,11 @@ nav .active {
 }
 .lilbox12 {
   font-family: "Days One", sans-serif;
-
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
-  padding: 80px;
+  padding: 60px 60px 100px 60px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -354,7 +426,7 @@ nav .active {
   font-family: "Days One", sans-serif;
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: white;
   padding: 100px;
   transition-duration: 200ms;
@@ -395,7 +467,7 @@ nav .active {
   width: 100%;
   clip-path: inset(20px 50px 20px 50px round 40px);
 }
-
+/*
 .lilbox1:hover,
 .lilbox2:hover,
 .lilbox3:hover,
@@ -413,6 +485,8 @@ nav .active {
 .zguimg:hover {
   transform: scale(1.02);
 }
+*/
+
 .lilbox14:hover {
   transform: scale(1.05);
   cursor: pointer;
@@ -423,6 +497,10 @@ nav .active {
 }
 .lilbox16:hover {
   transform: scale(1.05);
+  cursor: pointer;
+}
+.lilbox17:hover {
+  transform: scale(1.02);
   cursor: pointer;
 }
 .boxsection {
@@ -461,6 +539,15 @@ h3 {
   font-family: "Days One", sans-serif;
   font-size: 48px;
   padding: 30px 0 30px 0;
+}
+h4 {
+  font-family: "Days One", sans-serif;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+}
+h5 {
+  font-family: "Days One", sans-serif;
+  font-size: 18px;
 }
 
 .titlesection {
