--- a/src/index.css
+++ b/src/index.css
@@ -204,6 +204,7 @@ nav .active {
 
 .titlenapravlenie1 {
   background-image: url(./image/napravlenie1.jpg);
+  text-align: center;
 
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   border-radius: 10px;
