--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Days+One&family=Open+Sans:ital,wght@0,400;0,500;0,700;0,800;1,400;1,500;1,700&family=PT+Mono&family=Play:wght@400;700&family=Press+Start+2P&display=swap");
+@import url("https://fonts.cdnfonts.com/css/press-start");
 @import url("https://fonts.cdnfonts.com/css/days-one");
 
 :root {
@@ -8,7 +9,9 @@
 
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #fdfdf7;
+
+  background-color: #ffffff;
+  background-repeat: no-repeat;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,7 +28,7 @@
 
 body {
   margin: 0 auto;
-  padding: 100px 100px 20px 100px;
+  padding: 70px 80px 20px 80px;
   display: flex;
   width: 100%;
 }
@@ -49,12 +52,12 @@ body {
   width: fit-content;
   display: flex;
   flex-direction: row;
-  gap: 35px;
+
   align-items: center;
-  border-radius: 50px;
+  border-radius: 20px;
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(169, 169, 169, 0.2);
   z-index: 100;
 }
 .brand {
@@ -74,7 +77,7 @@ body {
 .nav-links a {
   margin: 0 30px;
   text-decoration: none;
-  color: #00000086;
+  color: rgba(0, 0, 0, 0.6);
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -94,10 +97,10 @@ nav .active {
   /* background-image: url("./image/home.png");
   background-repeat: no-repeat;
   background-size: cover; */
-  background-color: #e9e9e9;
+  background-color: rgba(255, 255, 255, 0.22);
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   height: 100%;
-  padding: 100px;
+  padding: 20px 60px 80px 60px;
   width: 100%;
   clip-path: inset(20px 50px 20px 50px round 40px);
 }
@@ -111,18 +114,24 @@ nav .active {
 }
 .lilbox1,
 .lilbox2 {
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 60, 255, 0.153),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   width: 50%;
+  color: #4a5568;
   background-color: white;
-  padding: 40px;
+  padding: 40px 30px 0 30px;
   margin: 0 10px 0 10px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox3 {
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 60, 255, 0.153),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
+  color: #4a5568;
   width: 100%;
   background-color: white;
   padding: 40px;
@@ -132,7 +141,30 @@ nav .active {
 }
 /*О кафедре*/
 .okafedre {
-  padding: 30px 150px 30px 150px;
+  padding: 0 120px 30px 120px;
+}
+.year {
+  background: linear-gradient(
+    to right,
+    #7953cd 20%,
+    #00affa 30%,
+    #0190cd 70%,
+    #764ada 80%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+  background-size: 500% auto;
+  animation: textShine 5s ease-in-out infinite alternate;
+}
+@keyframes textShine {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 .kaf1 {
   display: flex;
@@ -161,39 +193,55 @@ nav .active {
 .kafright {
   display: flex;
 }
+
 .lilbox8 {
   justify-items: center;
+  text-align: center;
   width: 100%;
   height: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
-  padding: 100px;
+  padding: 70px 30px 0 30px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox9 {
   width: 100%;
   text-align: center;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
   padding: 40px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox10 {
+  display: grid;
+  grid-template-columns: 60px 1fr;
   text-align: center;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
-  padding: 40px;
+  padding: 0 30px 0 30px;
+  align-items: center;
+  justify-content: center;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 /*Напраления*/
+.napravlenia {
+  padding: 30px 0 30px 0;
+}
+
 .napravlenias {
   padding: 0 50px 0 50px;
   display: grid;
@@ -205,9 +253,8 @@ nav .active {
 .titlenapravlenie1 {
   background-image: url(./image/napravlenie1.jpg);
   text-align: center;
-
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 10px;
+  border-radius: 18px;
   background-color: white;
   padding: 25px;
   transition-duration: 200ms;
@@ -218,7 +265,7 @@ nav .active {
   text-align: center;
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 10px;
+  border-radius: 18px;
   background-color: white;
   padding: 25px;
   transition-duration: 200ms;
@@ -229,7 +276,7 @@ nav .active {
   text-align: center;
   width: 100%;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 10px;
+  border-radius: 18px;
   background-color: white;
   padding: 25px;
   transition-duration: 200ms;
@@ -237,6 +284,7 @@ nav .active {
 }
 .napravlenieinfo {
   padding: 20px 20px 40px 20px;
+  color: #4a5568;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 80px;
@@ -250,18 +298,21 @@ nav .active {
   width: 30%;
   place-items: center;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: white;
 }
 .lilbox17 {
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
   padding: 10px;
-  transition-duration: 200ms;
+  transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
+
 .background-tint {
   background-color: rgba(0, 0, 0, 0.219);
   background-blend-mode: multiply;
@@ -270,26 +321,50 @@ nav .active {
 /*научная деятельность*/
 .lilbox4 {
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
-  background-color: white;
-  padding: 40px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
+  color: #4a5568;
+  background-color: rgb(255, 255, 255);
+  padding: 30px 40px 30px 40px;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.lilbox18 {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
+  color: #4a5568;
+  background-color: rgb(255, 255, 255);
+  padding: 30px 40px 30px 40px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox5 {
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
+  color: #4a5568;
   background-color: white;
-  padding: 100px;
+  padding: 40px;
   transition-duration: 200ms;
   margin-bottom: 15px;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox6 {
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
+  color: #4a5568;
   padding: 40px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -299,6 +374,13 @@ nav .active {
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   gap: 15px;
+}
+
+.span {
+  color: #000000;
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 8px;
 }
 
 .right {
@@ -318,8 +400,11 @@ nav .active {
 /*достижения и перспективы*/
 .lilbox7 {
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
+  color: #4a5568;
   background-color: white;
   padding: 40px;
   transition-duration: 200ms;
@@ -345,6 +430,7 @@ nav .active {
 /*schedule*/
 .schedulebox {
   background-color: #e9e9e9;
+  backdrop-filter: blur(10px);
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   height: 100%;
   padding: 100px;
@@ -353,36 +439,52 @@ nav .active {
 }
 
 /*staff*/
-.staffbox {
-  background-color: #e9e9e9;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  height: 100%;
-  padding: 100px;
-  width: 100%;
-  clip-path: inset(20px 50px 20px 50px round 40px);
-}
+
 .staffcontainer {
   font-family: "Days One", sans-serif;
-  padding: 30px 150px 30px 150px;
-  display: flex;
+  padding: 10px 130px 100px 130px;
+
   gap: 15px;
 }
 .stafflilbox {
+  cursor: grab;
+  height: 100%;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 30px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 20px;
   background-color: white;
-  padding: 40px;
+  padding: 20px;
 
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
+.hstaff {
+  padding: 10px 0 10px 0;
+}
 .staffimg {
+}
+
+.stafimg {
   border-radius: 30px;
 }
 .stafftext {
+  padding: 10px 0 10px 10px;
 }
-
+.staffinf {
+  padding: 3px 10px 3px 10px;
+  width: max-content;
+  border-radius: 6px;
+  color: #4a5568;
+  border: 1px solid #e8eef6;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  background: #f7fafc;
+}
+.infboxstaff {
+  padding: 0 10px 0 10px;
+}
 /*footer*/
 .footer {
   display: grid;
@@ -405,8 +507,10 @@ nav .active {
 .lilbox11 {
   font-family: "Days One", sans-serif;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
   padding: 60px;
   margin-bottom: 15px;
@@ -416,58 +520,97 @@ nav .active {
 .lilbox12 {
   font-family: "Days One", sans-serif;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
-  padding: 60px 60px 100px 60px;
+  padding: 30px 60px 30px 60px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox13 {
   font-family: "Days One", sans-serif;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
   background-color: white;
-  padding: 100px;
+  padding: 30px 60px 30px 60px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox14 {
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
-  background-color: white;
-  padding: 40px;
+  text-align: center;
+  box-shadow: 0 4px 6px -1px rgba(13, 51, 155, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+  border-radius: 22px;
+  background-color: rgb(9, 98, 186);
+  padding: 30px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox15 {
+  text-align: center;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
-  background-color: white;
-  padding: 40px;
+  box-shadow: 0 4px 6px -1px rgba(13, 51, 155, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+  border-radius: 22px;
+  background-color: rgb(6, 165, 213);
+  padding: 30px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox16 {
+  text-align: center;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  border-radius: 20px;
-  background-color: white;
-  padding: 40px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+  border-radius: 22px;
+  background-color: rgb(213, 108, 3);
+  padding: 30px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .boxfooter {
-  background-color: #e9e9e9;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  background: rgb(237, 237, 237);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 1px solid #edf2f7;
   height: 100%;
   padding: 100px;
   width: 100%;
   clip-path: inset(20px 50px 20px 50px round 40px);
 }
+.ssilki {
+  padding-top: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  gap: 15px;
+}
+.kontaktititle {
+  padding-bottom: 10px;
+}
+.ssilkicol {
+  display: grid;
+}
+
+a {
+  color: #4a5568;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+
 /*
 .lilbox1:hover,
 .lilbox2:hover,
@@ -483,10 +626,11 @@ nav .active {
 .lilbox12:hover,
 .lilbox13:hover,
 .stafflilbox:hover,
-.zguimg:hover {
-  transform: scale(1.02);
-}
 */
+.zguimg:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
 
 .lilbox14:hover {
   transform: scale(1.05);
@@ -502,11 +646,10 @@ nav .active {
 }
 .lilbox17:hover {
   transform: scale(1.02);
-  cursor: pointer;
 }
 .boxsection {
   display: flex;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .imgsection {
@@ -519,40 +662,56 @@ nav .active {
 /*текст*/
 p {
   font-family: "Play", sans-serif;
-  font-size: 16px;
-  color: rgb(41, 41, 41) f;
+  font-size: 14px;
+  color: #4a5568;
 }
 
 h1 {
+  text-align: left;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(to right, #000000, #4b83ff);
+  color: transparent;
+  background-clip: text;
   font-family: "Days One", sans-serif;
   font-size: 48px;
-  width: 75%;
-  padding-left: 20px;
+  width: 100%;
 }
 
 h2 {
+  color: #000000;
   font-family: "Days One";
-  font-size: 24px;
+  font-size: 18px;
   padding-bottom: 25px;
 }
 
 h3 {
   font-family: "Days One", sans-serif;
-  font-size: 48px;
-  padding: 30px 0 30px 0;
+  -webkit-text-fill-color: transparent;
+  background: linear-gradient(137.59deg, #555 20%, #000 75%);
+  text-wrap: balance;
+  color: transparent;
+  background-clip: text;
+  font-size: 38px;
+  padding: 40px 0 10px 0;
 }
 h4 {
   font-family: "Days One", sans-serif;
   color: rgb(255, 255, 255);
-  font-size: 18px;
+  font-size: 14px;
 }
 h5 {
   font-family: "Days One", sans-serif;
-  font-size: 18px;
+  font-size: 14px;
+}
+h6 {
+  font-family: "Play";
+  font-size: 14px;
 }
 
 .titlesection {
-  display: flex;
+  display: grid;
+  grid-template-columns: 2fr 100px;
+  padding: 60px 30px 50px 30px;
   align-items: center;
   justify-content: space-between;
 }
@@ -560,9 +719,38 @@ h5 {
 .zguimg {
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  width: 200px;
+  width: 100px;
 }
-
+.nornikelimg {
+  width: 60px;
+  align-items: center;
+  justify-content: center;
+}
+.zguimg2 {
+  width: 50px;
+  align-items: center;
+  justify-content: center;
+}
+.itlogo {
+  width: 40px;
+  align-items: center;
+  justify-content: center;
+}
+.vk {
+  width: 40px;
+  align-items: center;
+  justify-content: center;
+}
+.tg {
+  width: 40px;
+  align-items: center;
+  justify-content: center;
+}
+.ok {
+  width: 25px;
+  align-items: center;
+  justify-content: center;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -582,4 +770,14 @@ h5 {
 @font-face {
   font-family: "rostov";
   src: url("./fonts/Rostov.ttf");
+}
+
+@keyframes hue-rotate {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+
+  100% {
+    filter: hue-rotate(360deg);
+  }
 }
