--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Days+One&family=Open+Sans:ital,wght@0,400;0,500;0,700;0,800;1,400;1,500;1,700&family=PT+Mono&family=Play:wght@400;700&family=Press+Start+2P&display=swap");
 @import url("https://fonts.cdnfonts.com/css/press-start");
 @import url("https://fonts.cdnfonts.com/css/days-one");
+@font-face {
+  font-family: "Stardock";
+  src: url("./fonts/Stardock.otf");
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -10,8 +14,15 @@
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
 
-  background-color: #ffffff;
-  background-repeat: no-repeat;
+  background-color: hsla(6, 0%, 100%, 1);
+  background-image: radial-gradient(
+      at 5% 20%,
+      rgba(189, 205, 255, 0.273) 0px,
+      transparent 20%
+    ),
+    radial-gradient(at 95% 20%, rgba(254, 231, 176, 0.214) 0px, transparent 15%),
+    radial-gradient(at 5% 45%, rgba(255, 189, 236, 0.273) 0px, transparent 15%),
+    radial-gradient(at 95% 65%, rgba(189, 205, 255, 0.273) 0px, transparent 15%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -27,6 +38,7 @@
 }
 
 body {
+  background-color: hsl(var(--background));
   margin: 0 auto;
   padding: 70px 80px 20px 80px;
   display: flex;
@@ -45,33 +57,45 @@ body {
 }
 .container {
   top: 30px;
-  padding: 0 40px 0 40px;
+  padding: 0 20px 0 20px;
   position: fixed;
   height: fit-content;
-  min-height: 60px;
+  min-height: 50px;
   width: fit-content;
   display: flex;
   flex-direction: row;
 
   align-items: center;
-  border-radius: 20px;
+  border-radius: 14px;
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   background: rgba(169, 169, 169, 0.2);
   z-index: 100;
 }
 .brand {
-  color: #fff;
-  width: 100px;
+  font-family: "Stardock";
+  color: #0c0c0c;
+
   height: 25px;
   margin: 0 30px;
-  transition-duration: 300ms;
+  transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .brand:hover {
-  transform: scale(1.12);
+  transform: scale(1.1);
+}
+.top {
+  top: 30px;
+  padding: 0 20px 0 150px;
+  position: fixed;
+  height: fit-content;
+  min-height: 50px;
+  display: flex;
+  flex-direction: row;
+  z-index: 100;
 }
 .nav-links {
+  font-family: "Play";
   font-size: 15px;
 }
 .nav-links a {
@@ -97,7 +121,7 @@ nav .active {
   /* background-image: url("./image/home.png");
   background-repeat: no-repeat;
   background-size: cover; */
-  background-color: rgba(255, 255, 255, 0.22);
+  background-color: rgba(255, 255, 255, 0);
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   height: 100%;
   padding: 20px 60px 80px 60px;
@@ -138,6 +162,9 @@ nav .active {
   margin: 0 10px 0 10px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.part {
+  width: 100%;
 }
 /*О кафедре*/
 .okafedre {
@@ -295,7 +322,7 @@ nav .active {
 }
 .numbox {
   display: grid;
-  width: 30%;
+  width: 100px;
   place-items: center;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   border-radius: 8px;
@@ -303,7 +330,7 @@ nav .active {
 }
 .lilbox17 {
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+  box-shadow: 0 4px 6px -1px rgba(51, 81, 141, 0.153),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   border: 2px solid #edf2f7;
   border-radius: 22px;
@@ -397,6 +424,12 @@ nav .active {
   gap: 15px;
   padding-bottom: 100px;
 }
+.titleinf {
+  align-items: center;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+}
+
 /*достижения и перспективы*/
 .lilbox7 {
   width: 100%;
@@ -429,15 +462,90 @@ nav .active {
 }
 /*schedule*/
 .schedulebox {
-  background-color: #e9e9e9;
-  backdrop-filter: blur(10px);
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  background-color: white;
+
+  color: #4a5568;
   height: 100%;
-  padding: 100px;
+  padding: 40px 200px 40px 100px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  justify-items: center;
+
   width: 100%;
   clip-path: inset(20px 50px 20px 50px round 40px);
 }
+.scheduleright {
+  display: flex;
+}
+.schedulecol {
+  display: grid;
+  grid-template-columns: 1fr 6fr;
+}
+.scheduleboxbox {
+  margin-top: 30px;
+  border: 2px solid #edf2f7;
+  background-color: white;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border-radius: 20px;
+  justify-items: center;
+  gap: 0;
+  margin-bottom: 20px;
+}
+.grouptitle {
+  color: #000000;
+  font-family: "Days One";
+  font-size: 18px;
+  padding: 10px 0 10px 0;
+}
+.selector {
+  color: #4a5568;
+  width: 120px;
+  font-family: "Play";
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  position: relative;
+  outline: none;
+  cursor: pointer;
 
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 5px;
+}
+.selector2 {
+  color: #4a5568;
+  width: 100%;
+  font-family: "Play";
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+
+  outline: none;
+  margin: 10px 0 10px 0;
+
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 5px;
+}
+.selector3 {
+  color: #ffffff;
+  width: 150px;
+  font-family: "Play";
+  transition-duration: 400ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  border: none;
+  background-color: rgb(53, 53, 53);
+  padding: 5px;
+  border-radius: 8px;
+}
+.mail {
+  padding-bottom: 15px;
+}
+.selectorgroup {
+  display: grid;
+  grid-template-columns: 2fr;
+}
 /*staff*/
 
 .staffcontainer {
@@ -449,7 +557,7 @@ nav .active {
 .stafflilbox {
   cursor: grab;
   height: 100%;
-  width: 100%;
+  width: 280px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   border: 2px solid #edf2f7;
@@ -463,11 +571,11 @@ nav .active {
 .hstaff {
   padding: 10px 0 10px 0;
 }
-.staffimg {
-}
 
 .stafimg {
-  border-radius: 30px;
+  border-radius: 15px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 .stafftext {
   padding: 10px 0 10px 10px;
@@ -512,7 +620,7 @@ nav .active {
   border: 2px solid #edf2f7;
   border-radius: 22px;
   background-color: white;
-  padding: 60px;
+  padding: 30px 60px 30px 60px;
   margin-bottom: 15px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -520,6 +628,7 @@ nav .active {
 .lilbox12 {
   font-family: "Days One", sans-serif;
   width: 100%;
+  height: 200px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   border: 2px solid #edf2f7;
@@ -532,6 +641,7 @@ nav .active {
 .lilbox13 {
   font-family: "Days One", sans-serif;
   width: 100%;
+  height: 260px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   border: 2px solid #edf2f7;
@@ -542,52 +652,61 @@ nav .active {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox14 {
+  height: 105px;
   width: 100%;
   text-align: center;
   box-shadow: 0 4px 6px -1px rgba(13, 51, 155, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(9, 98, 186);
+  background-color: rgb(53, 53, 53);
   padding: 30px;
-  transition-duration: 200ms;
+  transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox15 {
   text-align: center;
+  height: 105px;
   width: 100%;
   box-shadow: 0 4px 6px -1px rgba(13, 51, 155, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(6, 165, 213);
+  background-color: rgb(53, 53, 53);
   padding: 30px;
-  transition-duration: 200ms;
+  transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox16 {
   text-align: center;
   width: 100%;
+  height: 105px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(213, 108, 3);
+  background-color: rgb(53, 53, 53);
   padding: 30px;
-  transition-duration: 200ms;
+  transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .boxfooter {
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
-  background: rgb(237, 237, 237);
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  border: 1px solid #edf2f7;
+  background: rgb(255, 255, 255);
+
+  border: 1px solid #000000;
   height: 100%;
-  padding: 100px;
+  padding: 50px 100px 50px 100px;
   width: 100%;
   clip-path: inset(20px 50px 20px 50px round 40px);
+}
+.footerbox {
+  background: rgb(255, 255, 255);
+  box-shadow: 0 4px 6px -1px rgba(0, 60, 255, 0.153),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 30px;
 }
 .ssilki {
   padding-top: 10px;
@@ -599,10 +718,14 @@ nav .active {
 .kontaktititle {
   padding-bottom: 10px;
 }
-.ssilkicol {
-  display: grid;
+.ssilka {
+  transition-duration: 400ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
-
+.ssilka:hover {
+  cursor: pointer;
+  color: #000;
+}
 a {
   color: #4a5568;
   text-decoration: none;
@@ -627,21 +750,28 @@ a:hover {
 .lilbox13:hover,
 .stafflilbox:hover,
 */
+.selector3:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
 .zguimg:hover {
-  transform: scale(1.1);
+  transform: scale(1.14);
   cursor: pointer;
 }
 
 .lilbox14:hover {
   transform: scale(1.05);
+  background-color: rgb(9, 98, 186);
   cursor: pointer;
 }
 .lilbox15:hover {
   transform: scale(1.05);
+  background-color: rgb(6, 165, 213);
   cursor: pointer;
 }
 .lilbox16:hover {
   transform: scale(1.05);
+  background-color: rgb(213, 108, 3);
   cursor: pointer;
 }
 .lilbox17:hover {
@@ -649,7 +779,7 @@ a:hover {
 }
 .boxsection {
   display: flex;
-  margin-top: 30px;
+  margin-top: 80px;
 }
 
 .imgsection {
@@ -657,6 +787,7 @@ a:hover {
   gap: 30px;
   width: 100px;
   display: flex;
+  align-items: center;
 }
 
 /*текст*/
@@ -667,13 +798,13 @@ p {
 }
 
 h1 {
-  text-align: left;
+  text-align: center;
   -webkit-text-fill-color: transparent;
   background-image: linear-gradient(to right, #000000, #4b83ff);
   color: transparent;
   background-clip: text;
   font-family: "Days One", sans-serif;
-  font-size: 48px;
+  font-size: 50px;
   width: 100%;
 }
 
@@ -709,17 +840,13 @@ h6 {
 }
 
 .titlesection {
-  display: grid;
-  grid-template-columns: 2fr 100px;
-  padding: 60px 30px 50px 30px;
-  align-items: center;
-  justify-content: space-between;
+  padding: 60px 30px 0 30px;
 }
 
 .zguimg {
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  width: 100px;
+  width: 40px;
 }
 .nornikelimg {
   width: 60px;
@@ -746,6 +873,7 @@ h6 {
   align-items: center;
   justify-content: center;
 }
+
 .ok {
   width: 25px;
   align-items: center;
