--- a/src/index.css
+++ b/src/index.css
@@ -535,7 +535,7 @@ nav .active {
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   border: none;
-  background-color: rgb(53, 53, 53);
+  background-color: #0e0e0e;
   padding: 5px;
   border-radius: 8px;
 }
@@ -613,40 +613,44 @@ nav .active {
   gap: 15px;
 }
 .lilbox11 {
+  color: white;
   font-family: "Days One", sans-serif;
   width: 100%;
+  height: 165px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  border: 2px solid #edf2f7;
+
   border-radius: 22px;
-  background-color: white;
+  background-color: rgb(37, 37, 37);
   padding: 30px 60px 30px 60px;
   margin-bottom: 15px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox12 {
+  color: white;
   font-family: "Days One", sans-serif;
   width: 100%;
   height: 200px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  border: 2px solid #edf2f7;
+
   border-radius: 22px;
-  background-color: white;
+  background-color: rgb(37, 37, 37);
   padding: 30px 60px 30px 60px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .lilbox13 {
+  color: white;
   font-family: "Days One", sans-serif;
   width: 100%;
   height: 260px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  border: 2px solid #edf2f7;
+
   border-radius: 22px;
-  background-color: white;
+  background-color: rgb(37, 37, 37);
   padding: 30px 60px 30px 60px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -655,11 +659,11 @@ nav .active {
   height: 105px;
   width: 100%;
   text-align: center;
-  box-shadow: 0 4px 6px -1px rgba(13, 51, 155, 0.1),
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(53, 53, 53);
+  background-color: rgb(37, 37, 37);
   padding: 30px;
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -668,11 +672,11 @@ nav .active {
   text-align: center;
   height: 105px;
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgba(13, 51, 155, 0.1),
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(53, 53, 53);
+  background-color: rgb(37, 37, 37);
   padding: 30px;
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -685,28 +689,28 @@ nav .active {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(53, 53, 53);
+  background-color: rgb(37, 37, 37);
   padding: 30px;
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .boxfooter {
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  background: rgb(255, 255, 255);
+  background: #1d375400;
 
-  border: 1px solid #000000;
   height: 100%;
-  padding: 50px 100px 50px 100px;
+  padding: 40px 60px 30px 60px;
   width: 100%;
   clip-path: inset(20px 50px 20px 50px round 40px);
 }
 .footerbox {
-  background: rgb(255, 255, 255);
+  background: #8d8d8d;
   box-shadow: 0 4px 6px -1px rgba(0, 60, 255, 0.153),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  border: 2px solid #edf2f7;
+  margin-top: 60px;
   border-radius: 30px;
+}
+.footertext {
+  color: rgb(0, 0, 0);
 }
 .ssilki {
   padding-top: 10px;
@@ -718,13 +722,17 @@ nav .active {
 .kontaktititle {
   padding-bottom: 10px;
 }
+.kontakti {
+  color: rgba(255, 255, 255, 0.623);
+}
 .ssilka {
+  color: rgba(255, 255, 255, 0.623);
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .ssilka:hover {
   cursor: pointer;
-  color: #000;
+  color: rgb(255, 255, 255);
 }
 a {
   color: #4a5568;
